# kedro-skills

./: .pre-commit-config.yaml  README.md  pyproject.toml  registry.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml
skills/catalog-config/: SKILL.md
src/kedro_skills/: __init__.py  cli.py  installer.py  orchestrator.py  registry.py  state.py  utils.py
src/kedro_skills/renderers/: __init__.py  agents_md.py  claude.py  copilot.py  cursor.py
tests/: conftest.py  test_cli.py  test_installer.py  test_orchestrator.py  test_registry.py  test_state.py  test_utils.py
tests/test_renderers/: test_agents_md.py  test_claude.py  test_copilot.py  test_cursor.py
