[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# PEP 735 dependency groups (used by uv; pip ignores this section).
# Mirrors [project.optional-dependencies].dev so `uv sync --group dev`
# and `pip install -e ".[dev]"` both work.
[dependency-groups]
dev = [
  "ruff>=0.11.2",
  "mypy>=1.12.1",
  "pre-commit>=4.3.0",
  "pytest>=8.0"
]

[project]
authors = [{name = "Kedro"}]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
  "click>=8.0",
  "kedro>=0.19.0"
]
description = "Distribute AI coding skills to Kedro projects."
keywords = [
  "Kedro",
  "AI",
  "skills",
  "AGENTS.md",
  "data science",
  "data engineering"
]
license = {text = "Apache Software License (Apache 2.0)"}
name = "kedro-skills"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
version = "0.1.0"

[project.entry-points."kedro.global_commands"]
kedro-skills = "kedro_skills.cli:commands"

[project.optional-dependencies]
dev = [
  "ruff>=0.11.2",
  "mypy>=1.12.1",
  "pre-commit>=4.3.0",
  "pytest>=8.0"
]

[project.urls]
Homepage = "https://github.com/kedro-org/kedro-skills"
Source = "https://github.com/kedro-org/kedro-skills"
Tracker = "https://github.com/kedro-org/kedro-skills/issues"

# ---- hatchling build config ----
[tool.hatch]

[tool.hatch.build.targets.sdist]
include = ["/src/kedro_skills", "/skills"]

[tool.hatch.build.targets.wheel]
packages = ["src/kedro_skills"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "kedro_skills/skills"

# ---- Mypy ----
[tool.mypy]
disable_error_code = ["misc"]
disallow_untyped_defs = true
exclude = ["^docs/"]
ignore_missing_imports = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

# ---- Pytest ----
[tool.pytest]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]

# ---- Ruff ----
[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
ignore = ["E501"]
select = [
  "F",  # Pyflakes
  "W",  # pycodestyle
  "E",  # pycodestyle
  "I",  # isort
  "UP",  # pyupgrade
  "PL",  # Pylint
  "T201",  # print statement
  "S",  # flake8-bandit
  "TCH",  # flake8-type-checking
  "RUF"  # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["kedro_skills"]

[tool.ruff.lint.per-file-ignores]
"{tests,docs,tools,static,features}/*" = ["T201", "S101", "S108"]
"{tests,docs}/*" = ["PLR2004", "PLR0913"]
